# mono

./: .gitignore  README.md  meson.build
mcu/atiny85/: example.h  flash.sh  main.c  meson-avr.cross  meson.build  setup.sh
mcu/atiny85/mono/: mono.c  mono_export.h
mcu/stm32/gpio/: gpio.c  gpio.h
mcu/stm32/tim/: tim.c  tim.h
reader/: meson.build
reader/include/: mono_export.h
reader/source/: common.h  event.c  mono.c  port.c
reader/test/: example.h  main.c
reader/test/alsa/: beep.c  export.h
writer/: main.c  meson.build
writer/abc/: abc.c  buffer.c  common.h  export.h
writer/abc/parser/: body.c  header.c
writer/mono/: export.h  mono.c
writer/source/: main.c  parser.c  writer.c
